@startuml

title __FACANA's Class Diagram__\n

  namespace ub.edu.model {
    namespace Facana {
      class ub.edu.model.Facana.FacanaData {
          - comarcaMap : Map<String, Comarca>
          - llistaGrup : List<Grup>
          - localitatMap : Map<String, Localitat>
          - rutaMap : Map<String, Ruta>
          - transportMap : Map<String, Transport>
          + FacanaData()
          + addGrupLlista()
          + afegirLocalitat()
          + afegirRuta()
          + afegirTransport()
          + getComarcaMap()
          + getDataService()
          + getLlistaGrups()
          + getLocalitatMap()
          + getRutaActual()
          + getRutaList()
          + getRutaMap()
          + getTransportMap()
          + getXarxaPersones()
          + initData()
          + initRutaMap()
          + initXarxaPersones()
          - initComarcaMap()
          - initLocalitatMap()
          - initTransportMap()
          - relacionarRutesComarques()
          - relacionarRutesLocalitats()
          - relacionarRutesTransports()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace Facana {
      class ub.edu.model.Facana.FacanaUser {
          + FacanaUser()
          + findPersona()
          + isMail()
          + isPasswordSegur()
          + loguejarPersona()
          + recuperarContrassenya()
          + validatePassword()
          + validateRegistrePersona()
          + validateUsername()
      }
    }
  }
  

  ub.edu.model.Facana.FacanaData o-- ub.edu.resources.service.DataService : data
  ub.edu.model.Facana.FacanaData o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.model.Facana.FacanaData o-- ub.edu.model.XarxaPersones : xarxaPersones
  ub.edu.model.Facana.FacanaUser o-- ub.edu.model.Facana.FacanaData : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
